--- a/KentStateConnect/templates/contact.html
+++ b/KentStateConnect/templates/contact.html
@@ -8,8 +8,8 @@
 <address>
     Kent State University<br />
     800 E Summit St, Kent, OH 44240<br />
-    <abbr title="Discord">Discord:</abbr>
-    https://discord.gg/VvQBHb8ekw
+    <abbr title="Discord">Student Discord:</abbr>
+    https://discord.gg/7D6ecVBhBR
 </address>
 
 {% endblock %}
