--- a/KentStateConnect/templates/index.html
+++ b/KentStateConnect/templates/index.html
@@ -14,12 +14,12 @@
         <p>
             Our forum allows you to discuss various things at Kent State, such as classes, internships, projects, and more. It provides a great place for students to hang out, get help, and connect with others within the Computer Science community.
         </p>
-        <p><a class="btn btn-default" href="http://flask.pocoo.org/docs/">Go to the forum &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://localhost:5555/forum">Go to the forum &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Find Tutors</h2>
         <p>The tutors at Kent State are available throughout the semester for many of the courses offered at Kent State. If you're stuck on anything, need help catching up to the curriculum, or are otherwise confused, feel free to stop by the tutoring office in the Mathematical Sciences Building.</p>
-        <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Find Tutoring &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://localhost:5555/tutors">Find Tutoring &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Handshake</h2>
