--- a/KentStateConnect/templates/layout.html
+++ b/KentStateConnect/templates/layout.html
@@ -25,6 +25,7 @@
                     <li><a href="{{ url_for('home') }}">Home</a></li>
                     <li><a href="{{ url_for('about') }}">About</a></li>
                     <li><a href="{{ url_for('contact') }}">Contact</a></li>
+                    <li><a href="{{ url_for('forum') }}">Forum</a></li>
                 </ul>
             </div>
         </div>
@@ -34,7 +35,7 @@
         {% block content %}{% endblock %}
         <hr />
         <footer>
-            <p>&copy; {{ year }} - My Flask Application</p>
+            <p>&copy; {{ year }} - Kent State Connect</p>
         </footer>
     </div>
 
