--- a/KentStateConnect/templates/tutors.html
+++ b/KentStateConnect/templates/tutors.html
@@ -4,7 +4,9 @@
 
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
+<p><a href="https://us.bbcollab.com/guest/16833b10b2214412a3fec63c59873573" class="btn btn-primary btn-large">To Online Tutoring &raquo;</a></p>
 
-<p>Come back when the tutor page is built!</p>
-
+<h3>Tutor Availability</h3>
+<p>The tutoring schedule can be found through the following link:</p>
+<p><a href="https://docs.google.com/spreadsheets/d/1zZqp8k1a4e4prX7fxem4y3bxQl0fDeEBbvR99ro04qw/edit#gid=0" class="btn btn-primary btn-large">The Schedule &raquo;</a></p>
 {% endblock %}
