--- a/KentStateConnect/templates/index.html
+++ b/KentStateConnect/templates/index.html
@@ -1,11 +1,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
 <div class="jumbotron">
     <h1>Kent State Connect</h1>
     <p class="lead">Welcome to Kent State Connect, where you can find resources, get help, and collaborate with other students!</p>
-    <p><a href="http://kent.edu" class="btn btn-primary btn-large">To Kent.edu &raquo;</a></p>
+    
+    
+    <p>Not what you're looking for?</p>
+    <p><a href="https://www.kent.edu/" class="btn btn-primary btn-large">Go To Kent.edu &raquo;</a></p>
 </div>
 
 <div class="row">
