--- a/KentStateConnect/templates/forum.html
+++ b/KentStateConnect/templates/forum.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
+<img src="https://i.imgur.com/p8RQptU.jpg" alt="KSU">
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
 
