--- a/KentStateConnect/templates/layout.html
+++ b/KentStateConnect/templates/layout.html
@@ -35,7 +35,7 @@
         {% block content %}{% endblock %}
         <hr />
         <footer>
-            <p>&copy; {{ year }} - Kent State Connect</p>
+            <p>&copy; {{ year }} - Kent State Connect</p> <img src="https://i.imgur.com/tXtoBzH.png" alt="KSU" width=179 height=52>
         </footer>
     </div>
 
