--- a/KentStateConnect/templates/index.html
+++ b/KentStateConnect/templates/index.html
@@ -5,7 +5,8 @@
     <h1>Kent State Connect</h1>
     <p class="lead">Welcome to Kent State Connect, where you can find resources, get help, and collaborate with other students!</p>
     
-    
+    <iframe src=https://khe.io/ width = 500 height=500></iframe><iframe src=https://hacksu.com/ width=500 height=500></iframe>
+
     <p>Not what you're looking for?</p>
     <p><a href="https://www.kent.edu/" class="btn btn-primary btn-large">Go To Kent.edu &raquo;</a></p>
 </div>
