--- a/KentStateConnect/templates/contact.html
+++ b/KentStateConnect/templates/contact.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
 <h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
-
-<address>
+<div class=jumbotron>
+    
+    <h3>{{ message }}</h3>
+    <address>
     Kent State University<br />
     800 E Summit St, Kent, OH 44240<br />
     <abbr title="Discord">Student Discord:</abbr>
     https://discord.gg/7D6ecVBhBR
-</address>
-
+    </address>
+</div>
 {% endblock %}
