--- a/KentStateConnect/templates/forum.html
+++ b/KentStateConnect/templates/forum.html
@@ -2,9 +2,11 @@
 
 {% block content %}
 <img src="https://i.imgur.com/p8RQptU.jpg" alt="KSU">
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<div class=jumbotron>
+    <h2>{{ title }}.</h2>
+    <h3>{{ message }}</h3>
 
-<p>Come back when the forum is built!</p>
+    <p>Come back when the forum is built!</p>
+</div>
 
 {% endblock %}
