--- a/KentStateConnect/templates/tutors.html
+++ b/KentStateConnect/templates/tutors.html
@@ -1,12 +1,14 @@
 {% extends "layout.html" %}
-<img src="https://i.imgur.com/p8RQptU.jpg" alt="KSU">
+
 {% block content %}
 
 <h2>{{ title }}.</h2>
+<div class=jumbotron><img src="https://i.imgur.com/p8RQptU.jpg" alt="KSU">
 <h3>{{ message }}</h3>
 <p><a href="https://us.bbcollab.com/guest/16833b10b2214412a3fec63c59873573" class="btn btn-primary btn-large">To Online Tutoring &raquo;</a></p>
 
 <h3>Tutor Availability</h3>
 <p>The tutoring schedule can be found through the following link:</p>
 <p><a href="https://docs.google.com/spreadsheets/d/1zZqp8k1a4e4prX7fxem4y3bxQl0fDeEBbvR99ro04qw/edit#gid=0" class="btn btn-primary btn-large">The Schedule &raquo;</a></p>
+</div>
 {% endblock %}
