--- a/KentStateConnect/templates/login.html
+++ b/KentStateConnect/templates/login.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+
+{% block content %}
 <html> 
     <head> 
         <meta charset="UTF-8"> 
@@ -23,3 +26,4 @@
         </div> 
     </body> 
 </html> 
+{% endblock %}
