--- a/KentStateConnect/templates/layout.html
+++ b/KentStateConnect/templates/layout.html
@@ -26,7 +26,7 @@
                     <li><a href="{{ url_for('about') }}">About</a></li>
                     <li><a href="{{ url_for('contact') }}">Contact</a></li>
                     <li><a href="{{ url_for('forum') }}">Forum</a></li>
-                    <align right><a href="{{ url_for('login') }}" class="btn">Login</a></align> 
+                    <li><a href="{{ url_for('login') }}">Login</a></li>
           </div> 
         </div> 
     </body> 
