--- a/KentStateConnect/templates/register.html
+++ b/KentStateConnect/templates/register.html
@@ -8,17 +8,17 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">               
     </head> 
     <body></br></br></br></br></br> 
-        <div align="center"> 
-          <div align="center" class="border"> 
+        <div align="left"> 
+          <div align="left" class="border"> 
              <div class="header"> 
                 <h1 class="word">Register</h1> 
              </div></br></br></br> 
             <h2 class="word"> 
                 <form action="{{ url_for('register') }}" method="post"> 
                   <div class="msg">{{ msg }}</div> 
-                    <input id="username" name="username" type="text" placeholder="Enter Your Username" class="textbox"/></br></br> 
-                    <input id="password" name="password" type="password" placeholder="Enter Your Password" class="textbox"/></br></br> 
-                    <input id="email" name="email" type="text" placeholder="Enter Your Email ID" class="textbox"/></br></br> 
+                    Username:　<input id="username" name="username" type="text" class="textbox"/></br></br> 
+                    Password:　 <input id="password" name="password" type="password"  class="textbox"/></br></br> 
+                    E-mail: 　 　<input id="email" name="email" type="text" class="textbox"/></br></br> 
                     <input type="submit" class="btn" value="Sign Up"></br> 
                 </form> 
             </h2> 
