--- a/KentStateConnect/templates/login.html
+++ b/KentStateConnect/templates/login.html
@@ -4,20 +4,19 @@
 <html> 
     <head> 
         <meta charset="UTF-8"> 
-        <title> Login </title> 
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">            
+        <title> Login </title>     
     </head> 
     <body></br></br></br></br></br> 
         <div align="left"> 
           <div align="left" class="border"> 
              <div class="header"> 
-                <h1 class="word">Login</h1> 
+                <h1 class="word"><align="left">Login</align></h1> 
              </div></br></br></br> 
             <h2 class="word"> 
                 <form action="{{ url_for('login') }}" method="post"> 
                   <div class="msg">{{ msg }}</div> 
-                    Username: <input id="username" name="username" type="text" class="textbox"/></br></br> 
-                    Password: <input id="password" name="password" type="password" class="textbox"/></br></br></br> 
+                    <input id="username" name="username" type="text" placeholder="Username" class="textbox"/></br></br> 
+                    <input id="password" name="password" type="password" placeholder="Password" class="textbox"/></br></br></br> 
                     <input type="submit" class="btn" value="Sign In"></br></br> 
                 </form> 
             </h2> 
