Fixed logout and Login button to redirect correctly

--- a/KentStateConnect/templates/layout.html
+++ b/KentStateConnect/templates/layout.html
@@ -28,6 +28,7 @@
                     <li><a href="{{ url_for('resources') }}">Resources</a></li>
                     <li><a href="{{ url_for('forum') }}">Forum</a></li>
                     <li><a href="{{ url_for('login') }}">Login</a></li>
+                    <li><a href="{{ url_for('logout') }}">Logout</a></li>
           </div> 
         </div> 
     </body> 
