--- a/KentStateConnect/templates/layout.html
+++ b/KentStateConnect/templates/layout.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -27,6 +26,12 @@
                     <li><a href="{{ url_for('contact') }}">Contact</a></li>
                     <li><a href="{{ url_for('resources') }}">Resources</a></li>
                     <li><a href="{{ url_for('forum') }}">Forum</a></li>
+                    <li><a href="{{ url_for('login') }}">Login</a></li>
+                    <li><a href="{{ url_for('logout') }}">Logout</a></li>
+          </div> 
+        </div> 
+    </body> 
+</html> 
                 </ul>
             </div>
         </div>
