Made changes to how the forum looks and acts

--- a/KentStateConnect/templates/register.html
+++ b/KentStateConnect/templates/register.html
@@ -18,7 +18,7 @@
                     <input id="username" name="username" type="text" placeholder="Username" class="textbox"/></br></br> 
                     <input id="password" name="password" type="password" placeholder="Password" class="textbox"/></br></br> 
                     <input id="password" name="cpassword" type="password" placeholder="Confirm Password" class="textbox"/></br></br></br> 
-                    <input id="email" name="email" type="text" placeholder="email" class="textbox"/></br></br> 
+                    <input id="email" name="email" type="text" placeholder="KSU ID" class="textbox"/>@kent.edu</br></br> 
                     <input type="submit" class="btn" value="Sign Up"></br> 
                 </form> 
             </h2> 
