--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataFlair discussion forum</title>
+    <title>Kent State Connect</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"0>
     <style>
         .box{
@@ -13,14 +13,22 @@
         }
     </style>
 </head>
+
 <body>
-        <h2 class="jumbotron">
-            Currently active forums: {{count}}
+       <h2 class="jumbotron">
+           <p style ="text-align: center;"> Kent State Connect Forums
+            <br>
+            
+            <a href="http://localhost:5555/home">Home</a> | 
+            <a href="http://localhost:5555/about">About</a> | 
+            <a href="http://localhost:5555/contact">Contact</a> | 
+            <a href="http://localhost:5555/resources">Resources</a> </p>
+            <br>        </h2>
+            <!-- Currently active forums: {{count}} -->
             <form method="POST" action="{% url 'addInForum' %}">
                 {% csrf_token %}
             <button class="btn btn-success" style="width:fit-content; padding: 4px; margin:10px;">Create a Post</button>
             </form>
-        </h2>
             <div class="card-columns" style="padding: 10px; margin: 20px;"></div>
             
             
