Removed white space and changed the home page a bit

--- a/KentStateConnect/templates/index.html
+++ b/KentStateConnect/templates/index.html
@@ -5,7 +5,7 @@
     <h1>Kent State Connect</h1>
     <p class="lead">Welcome to Kent State Connect, where you can find resources, get help, and collaborate with other students!</p>
     
-    <iframe src=https://khe.io/ width = 500 height=500></iframe><iframe src=https://hacksu.com/ width=500 height=500></iframe>
+    <iframe src=https://khe.io/ width = 710 height=500></iframe><iframe src=https://hacksu.com/ width=710 height=500></iframe>
 
     <p>Not what you're looking for?</p>
     <p><a href="https://www.kent.edu/" class="btn btn-primary btn-large">Go To Kent.edu &raquo;</a></p>
@@ -17,17 +17,17 @@
         <p>
             Our forum allows you to discuss various things at Kent State, such as classes, internships, projects, and more. It provides a great place for students to hang out, get help, and connect with others within the Computer Science community.
         </p>
-        <p><a class="btn btn-default" href="http://localhost:5555/forum">Go to the forum &raquo;</a></p>
+        <p><a class="btn btn-warning" href="http://localhost:5555/forum">Go to the forum &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Find Tutors</h2>
-        <p>The tutors at Kent State are available throughout the semester for many of the courses offered at Kent State. If you're stuck on anything, need help catching up to the curriculum, or are otherwise confused, feel free to stop by the tutoring office in the Mathematical Sciences Building.</p>
-        <p><a class="btn btn-default" href="http://localhost:5555/tutors">Find Tutoring &raquo;</a></p>
+        <h2>Helpful Resources</h2>
+        <p>Kent State offers a lot of helpful resources for students. This includes things like tutoring, TechHelp, and getting into contact with faculty and staff. The resources page is a central place to find a lot of helpful links and other information.</p>
+        <p><a class="btn btn-primary" href="http://localhost:5555/resources">Find Helpful Resources &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Handshake</h2>
         <p>Internships are a big deal for budding Software Engineers. Whether you're in it for web development, standalone applications, machine learning, game development, or even data science, be sure to find the right internship for you over at Handshake.</p>
-        <p><a class="btn btn-default" href="https://kent.joinhandshake.com/">To Handshake &raquo;</a></p>
+        <p><a class="btn btn-warning" href="https://kent.joinhandshake.com/">Go to Handshake &raquo;</a></p>
     </div>
 </div>
 
