--- a/KentStateConnect/templates/resources.html
+++ b/KentStateConnect/templates/resources.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 
+
 {% block content %}
+<img src="https://i.imgur.com/p8RQptU.jpg" class="img-responsive" alt="KSU">
 
 <div class=jumbotron>
 
