--- a/KentStateConnect/static/content/bootstrap.css
+++ b/KentStateConnect/static/content/bootstrap.css
@@ -21,6 +21,10 @@
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
+.ml-0 {
+  margin: 0 !important;
+}
+
 article,
 aside,
 details,
@@ -137,6 +141,13 @@ sub {
 
 img {
   border: 0;
+  float: left;
+  margin: 0;
+}
+
+.container .img {
+  margin-right: -80px;
+  margin-left: -80px;
 }
 
 svg:not(:root) {
