A few small tweaks

--- a/KentStateConnect/templates/resources.html
+++ b/KentStateConnect/templates/resources.html
@@ -23,6 +23,12 @@
 <h3>Get Involved</h3>
 <p>Learn how to code with Hacksu:</p>
 <p><a href="https://hacksu.cs.kent.edu/" class="btn btn-warning btn-large">Hacksu &raquo;</a></p>
+
+<h3>Tutoring</h3>
+<p>The tutoring schedule can be found through the following link:</p>
+<p><a href="https://docs.google.com/spreadsheets/d/1zZqp8k1a4e4prX7fxem4y3bxQl0fDeEBbvR99ro04qw/edit#gid=0" class="btn btn-primary btn-large">The Schedule &raquo;</a></p>
+<p>The tutoring Blackboard Collaborate can be found through the following link:</p>
+<p><a href="https://us.bbcollab.com/guest/16833b10b2214412a3fec63c59873573" class="btn btn-primary btn-large">To Online Tutoring &raquo;</a></p>
 </div>
 
 {% endblock %}
