Visual changes to the site

--- a/templates/addInDiscussion.html
+++ b/templates/addInDiscussion.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"0>
     
 </head>
-<form action="{% url 'addInDiscussion' %}" method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" class="btn btn-success" value="submit">
-</form>
+<body style="background: rgb(231, 231, 231)">
+    <div class="card-columns" style="padding: 150px; margin: 20px;"></div>
+    <form action="{% url 'addInDiscussion' %}" method="POST" style="background: white;">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" class="btn btn-success" value="submit">
+    </form>
+</body>
