--- a/templates/addInForum.html
+++ b/templates/addInForum.html
@@ -15,6 +15,8 @@
     <form action="{% url 'addInForum' %}" method="POST" style="background: white;">
         {% csrf_token %}
         {{form.as_p}}
+        To add a post to a specific forum category, enter the category's name in the "tag" field. <br>
+        For example: To post something to General Discussions, type "General"<br>
         <input type="submit" class="btn btn-success" value="submit">
     </form>
 </body>
