--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
          <a href="http://localhost:5555/resources"><button class="main_page_links">Resources</button></a>
          </p>    
     </h2>
-
+    <p align=center><img src="https://i.imgur.com/p8RQptU.jpg" alt="KSU" width=44% height=44%></p>
     <div class="card-body container" style="padding: 30px; background: white;">
         <div class="card-body container">
         <a href="http://localhost:8000/GeneralDiscussions/"><h1>General Discussions</h1></a> 
@@ -37,14 +37,20 @@
         <br>
         <hr>
         <a href="http://localhost:8000/TutoringDiscussions/"><h1>Tutoring Discussions</h1></a>
-        <!--<p align="right>">Total Discussions: {{count}}</p>-->
+        <p align="right>">Total Discussions: {{count}}</p>
         This is a place where you can discuss things related to tutoring.
         <br>
         <hr>
     </div>
     </div>
 
-
+    <div class="container body-content">
+        {% block content %}{% endblock %}
+        <hr />
+        <footer>
+            <p>&copy; {{ year }} - Kent State Connect</p> <img src="https://i.imgur.com/tXtoBzH.png" alt="KSU" width=179 height=52>
+        </footer>
+    </div>
 </body>
 
 
