Fixed forum counters

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,17 +27,17 @@
     <div class="card-body container" style="padding: 30px; background: white;">
         <div class="card-body container">
         <a href="http://localhost:8000/GeneralDiscussions/"><h1>General Discussions</h1></a> 
-        <!--<p align="right>">Total Discussions: {{count}}</p>-->
+        <p align="right>">Total Discussions: {{generalcount}}</p>
         This is a place where you can discuss various things happening at Kent State.
         <br>
         <hr>
         <a href="http://localhost:8000/ClassDiscussions/"><h1>Class Discussions</h1></a>
-        <!--<p align="right>">Total Discussions: {{count}}</p>-->
+        <p align="right>">Total Discussions: {{classcount}}</p>
         This is a place where you can discuss classes you're taking.
         <br>
         <hr>
         <a href="http://localhost:8000/TutoringDiscussions/"><h1>Tutoring Discussions</h1></a>
-        <p align="right>">Total Discussions: {{count}}</p>
+        <p align="right>">Total Discussions: {{tutoringcount}}</p>
         This is a place where you can discuss things related to tutoring.
         <br>
         <hr>
