Restructured the forum

--- a/templates/careers.html
+++ b/templates/careers.html
@@ -21,42 +21,45 @@
          <a href="http://localhost:5555/about"><button class="main_page_links">About</button></a>  
          <a href="http://localhost:5555/contact"><button class="main_page_links">Contact</button></a>  
          <a href="http://localhost:5555/resources"><button class="main_page_links">Resources</button></a>
+         <a href="http://localhost:8000"><button class="main_page_links">Directory</button></a>
          </p>    
     </h2>
     <p align=center><img src="https://i.imgur.com/p8RQptU.jpg" alt="KSU" width=44% height=44%></p>
     <div class="card-body container" style="padding: 30px; background: white;">
         <div class="card-body container">
-        <a href="http://localhost:8000/GeneralDiscussions/"><h1>General Discussions</h1></a> 
-        <p align="right>">Total Discussions: {{generalcount}}</p>
-        This is a place where you can discuss various things happening at Kent State.
+        <a href="http://localhost:8000/Careers/ApplicationDevelopment/"><h1>Application Development</h1></a> 
+        <p align="right>">Total Discussions: {{appcount}}</p>
+        This is a place where you can discuss application development careers.
         <br>
         <hr>
-        <a href="http://localhost:8000/ClassDiscussions/"><h1>Class Discussions</h1></a>
-        This is a place where you can discuss classes you're taking.
+        <a href="http://localhost:8000/Careers/WebDevelopment/"><h1>Web Development</h1></a>
+        <p align="right>">Total Discussions: {{webcount}}</p>
+        This is a place where you can discuss web development careers.
         <br>
         <hr>
-        <a href="http://localhost:8000/CodingHelp/"><h1>Coding Help</h1></a>
-        <p align="right>">Total Discussions: {{codingcount}}</p>
-        This is a place where you can ask for help for coding in various languages.
+        <a href="http://localhost:8000/Careers/MachineLearning"><h1>Machine Learning</h1></a>
+        <p align="right>">Total Discussions: {{MaLcount}}</p>
+        This is a place where you can discuss Machine Learning careers.
         <br>
         <hr>
-        <a href="http://localhost:8000/TutoringDiscussions/"><h1>Tutoring Discussions</h1></a>
-        <p align="right>">Total Discussions: {{tutoringcount}}</p>
-        This is a place where you can discuss things related to tutoring.
+        <a href="http://localhost:8000/Careers/ArtificialIntelligence"><h1>Artificial Intelligence</h1></a>
+        <p align="right>">Total Discussions: {{ArtIcount}}</p>
+        This is a place where you can discuss Artificial Intelligence careers.
         <br>
         <hr>
-        <a href="http://localhost:8000/Internships/"><h1>Internship Discussions</h1></a>
-        <p align="right>">Total Discussions: {{interncount}}</p>
-        This is a place where you can discuss things related to internships.
+        <a href="http://localhost:8000/Careers/DataScience"><h1>Data Science</h1></a>
+        <p align="right>">Total Discussions: {{datacount}}</p>
+        This is a place where you can discuss Data Science careers.
         <br>
         <hr>
-        <a href="http://localhost:8000/Careers/"><h1>Career Discussions</h1></a>
-        This is a place where you can discuss things related to careers.
+        <a href="http://localhost:8000/Careers/GameDevelopment"><h1>Game Development</h1></a>
+        <p align="right>">Total Discussions: {{gamecount}}</p>
+        This is a place where you can discuss Game Development careers.
         <br>
         <hr>
-        <a href="http://localhost:8000/Roommate/"><h1>Find a Roommate</h1></a>
-        <p align="right>">Total Discussions: {{roomcount}}</p>
-        Need someone to share rent with? Find a roommate here!
+        <a href="http://localhost:8000/Careers/InformationTechnology"><h1>Information Technology</h1></a>
+        <p align="right>">Total Discussions: {{infocount}}</p>
+        This is a place where you can discuss Information Technology careers.
         <br>
         <hr>
     </div>
