--- a/templates/ClassDiscussions.html
+++ b/templates/ClassDiscussions.html
@@ -15,61 +15,28 @@
 </head>
 
 <body style="background-color: rgb(231, 231, 231);">
-       <h2 class="top-bar">
-            <p style ="text-align: left;">  
-            <a href="http://localhost:5555/home"><button class="main_page_links">Home</button></a>  
-            <a href="http://localhost:5555/about"><button class="main_page_links">About</button></a>  
-            <a href="http://localhost:5555/contact"><button class="main_page_links">Contact</button></a>  
-            <a href="http://localhost:5555/resources"><button class="main_page_links">Resources</button></a>
-            <a href="http://localhost:8000"><button class="main_page_links">Directory</button></a> </p>    </h2>
-            <!-- Currently active forums: {{count}} -->
-            <div style="padding-left:27vw;">
-            <form method="POST" action="{% url 'addInForum' %}">
-                {% csrf_token %}
-            <button class="btn btn-success" style="width:fit-content; padding: 4px; margin:10px;">Create a Post</button>
-            </form></div>
-            
-            <!--<div class="card-columns" style="padding-right: 10px; marg;"></div>-->
-            
-            {%for forum in forums %}
-
-                <div class="card box container" style="padding: 10px;">
-                    <form method="POST" action="http://localhost:8000/deleteforum/{{forum.id}}" >{% csrf_token %}<p align="right"><button class="btn btn-success" style="width:fit-content;">Delete</button></p></form>
-
-                    <h5>
-                        <h1>{{forum.topic}}</h1>
-                        <div class="card-body container">
-                            <p> By: {{forum.name}}</p>{{forum.date_created}}<hr>
-                            <p>{{forum.description}}</p>
-                            <br>
-                            <br>
-                            <form method="POST" action="{% url 'addInDiscussion' %}">
-                                {% csrf_token %}
-                                <p align="right"><button class="btn btn-success" style="width:fit-content;">Reply</button></p>
-                            </form>
-                            <hr>     
-                            <h4>Replies</h4>
-                            {%for discuss in discussions%}
-                            {%for objs in discuss%}  
-                            {% if objs.forum == forum %}
-                            <form method="POST" action="http://localhost:8000/deletereply/{{objs.id}}" >{% csrf_token %} <p align="right"><button class="btn btn-success" style="width:fit-content; font-size:10px;">Delete</button></p></form>
-                               <b>{{objs.name}}</b>:<br>
-                               {{objs.discuss}}
-                               <br><br><br>
-                            {% endif %}
-                            {%endfor%}
-                            {%endfor%}
-
-                        </div>
-                </div>
-            </div>
-            <br>
-            
-            {%endfor%}
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <h2 class="top-bar">
+         <p style ="text-align: left;">  
+         <a href="http://localhost:5555/home"><button class="main_page_links">Home</button></a>  
+         <a href="http://localhost:5555/about"><button class="main_page_links">About</button></a>  
+         <a href="http://localhost:5555/contact"><button class="main_page_links">Contact</button></a>  
+         <a href="http://localhost:5555/resources"><button class="main_page_links">Resources</button></a>
+         <a href="http://localhost:8000"><button class="main_page_links">Directory</button></a>
+         </p>    
+    </h2>
+    <p align=center><img src="https://i.imgur.com/p8RQptU.jpg" alt="KSU" width=44% height=44%></p>
+    <div class="card-body container" style="padding: 30px; background: white;">
+        <div class="card-body container">
+        <a href="http://localhost:8000/ClassDiscussions/Core/"><h1>Core Classes</h1></a> 
+        Talk about the core curriculum classes here.
+        <br>
+        <hr>
+        <a href="http://localhost:8000/ClassDiscussions/Electives/"><h1>Elective Classes</h1></a>
+        Talk about electives and concentration-related classes here
+        <br>
+        <hr>
+    </div>
+    </div>
 
     <div class="container body-content">
         {% block content %}{% endblock %}
@@ -79,7 +46,8 @@
         </footer>
     </div>
 </body>
-</html>
+
+
 <style>
     .top-bar{
         color: white;
@@ -95,4 +63,7 @@
         border: transparent;
     }
 
+    .Forum-Links{
+        background: rgb(255, 255, 255);
+    }
 </style>
