--- a/templates/CodingHelp.html
+++ b/templates/CodingHelp.html
@@ -21,42 +21,45 @@
          <a href="http://localhost:5555/about"><button class="main_page_links">About</button></a>  
          <a href="http://localhost:5555/contact"><button class="main_page_links">Contact</button></a>  
          <a href="http://localhost:5555/resources"><button class="main_page_links">Resources</button></a>
+         <a href="http://localhost:8000"><button class="main_page_links">Directory</button></a>
          </p>    
     </h2>
     <p align=center><img src="https://i.imgur.com/p8RQptU.jpg" alt="KSU" width=44% height=44%></p>
     <div class="card-body container" style="padding: 30px; background: white;">
         <div class="card-body container">
-        <a href="http://localhost:8000/GeneralDiscussions/"><h1>General Discussions</h1></a> 
-        <p align="right>">Total Discussions: {{generalcount}}</p>
-        This is a place where you can discuss various things happening at Kent State.
+        <a href="http://localhost:8000/CodingHelp/C++"><h1>C/C++</h1></a>
+        <p align="right>">Total Discussions: {{Ccount}}</p>
+        Talk about C++ and ask for help here.
         <br>
         <hr>
-        <a href="http://localhost:8000/ClassDiscussions/"><h1>Class Discussions</h1></a>
-        This is a place where you can discuss classes you're taking.
+        <a href="http://localhost:8000/CodingHelp/CSharp"><h1>C#</h1></a>
+        <p align="right>">Total Discussions: {{CSarpLcount}}</p>
+        Talk about C# and ask for help here.
         <br>
         <hr>
-        <a href="http://localhost:8000/CodingHelp/"><h1>Coding Help</h1></a>
-        <p align="right>">Total Discussions: {{codingcount}}</p>
-        This is a place where you can ask for help for coding in various languages.
+        <a href="http://localhost:8000/CodingHelp/Java"><h1>Java</h1></a>
+        <p align="right>">Total Discussions: {{Javacount}}</p>
+        Talk about Java and ask for help here.
         <br>
         <hr>
-        <a href="http://localhost:8000/TutoringDiscussions/"><h1>Tutoring Discussions</h1></a>
-        <p align="right>">Total Discussions: {{tutoringcount}}</p>
-        This is a place where you can discuss things related to tutoring.
+        <a href="http://localhost:8000/CodingHelp/Javascript"><h1>Javascript</h1></a>
+        <p align="right>">Total Discussions: {{JScount}}</p>
+        Talk about Javascript and ask for help here.
         <br>
         <hr>
-        <a href="http://localhost:8000/Internships/"><h1>Internship Discussions</h1></a>
-        <p align="right>">Total Discussions: {{interncount}}</p>
-        This is a place where you can discuss things related to internships.
+        <a href="http://localhost:8000/CodingHelp/Python"><h1>Python</h1></a>
+        <p align="right>">Total Discussions: {{Pythoncount}}</p>
+        Talk about Python and ask for help here.
         <br>
         <hr>
-        <a href="http://localhost:8000/Careers/"><h1>Career Discussions</h1></a>
-        This is a place where you can discuss things related to careers.
+        <a href="http://localhost:8000/CodingHelp/Swift"><h1>Swift</h1></a>
+        <p align="right>">Total Discussions: {{Swiftcount}}</p>
+        Talk about Swift and ask for help here.
         <br>
         <hr>
-        <a href="http://localhost:8000/Roommate/"><h1>Find a Roommate</h1></a>
-        <p align="right>">Total Discussions: {{roomcount}}</p>
-        Need someone to share rent with? Find a roommate here!
+        <a href="http://localhost:8000/CodingHelp/FrontEnd"><h1>Front End</h1></a>
+        <p align="right>">Total Discussions: {{FEcount}}</p>
+        Talk about Front End languages (HTML, CSS, etc.) and ask for help here.
         <br>
         <hr>
     </div>
