--- a/templates/Forums.html
+++ b/templates/Forums.html
@@ -16,24 +16,24 @@
 
 <body style="background-color: rgb(231, 231, 231);">
        <h2 class="top-bar">
-            <p style ="text-align: left;">  
+            <p style ="text-align:left;">  
             <a href="http://localhost:5555/home"><button class="main_page_links">Home</button></a>  
             <a href="http://localhost:5555/about"><button class="main_page_links">About</button></a>  
             <a href="http://localhost:5555/contact"><button class="main_page_links">Contact</button></a>  
             <a href="http://localhost:5555/resources"><button class="main_page_links">Resources</button></a>
             <a href="http://localhost:8000"><button class="main_page_links">Directory</button></a> </p>    </h2>
 
-            <div style="padding-left:27vw;">
+            <div style="padding-left:71vw;">
             <form method="POST" action="{% url 'addInForum' %}">
                 {% csrf_token %}
-            <button class="btn btn-success" style="width:fit-content; padding: 4px; margin:10px;">Create a Post</button>
+            <button class="btn btn-success" style="width:fit-content; padding: .375rem .75rem; margin:20px;">Create a Post</button>
             </form></div>
             
             {%for forum in forums %}
 
                 <div class="card box container" style="padding: 10px;">
-                    <form method="POST" action="http://localhost:8000/deleteforum/{{forum.id}}" >{% csrf_token %}<p align="right"><button class="btn btn-success" style="width:fit-content;">Delete</button></p></form>
-
+                    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+                    <form method="POST" action="http://localhost:8000/deleteforum/{{forum.id}}" >{% csrf_token %}<p align="right"><button class="btn btn-default"><span class="material-icons">delete</span></button></p></form>
                     <h5>
                         <h1>{{forum.topic}}</h1>
                         <div class="card-body container">
@@ -50,7 +50,8 @@
                             {%for discuss in discussions%}
                             {%for objs in discuss%}  
                             {% if objs.forum == forum %}
-                            <form method="POST" action="http://localhost:8000/deletereply/{{objs.id}}" >{% csrf_token %} <p align="right"><button class="btn btn-success" style="width:fit-content; font-size:10px;">Delete</button></p></form>
+                            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+                            <form method="POST" action="http://localhost:8000/deletereply/{{objs.id}}" >{% csrf_token %}<p align="right"><button class="btn btn-default"><span class="material-icons">delete</span></button></p></form>
                                <b>{{objs.name}}</b>: {{objs.id}}<br>
                                {{objs.discuss}}
                                <br><br><br>
