--- a/templates/Forums.html
+++ b/templates/Forums.html
@@ -35,7 +35,7 @@
                     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
                     <form method="POST" action="http://localhost:8000/deleteforum/{{forum.id}}" >{% csrf_token %}<p align="right"><button class="btn btn-default"><span class="material-icons">delete</span></button></p></form>
                     <h5>
-                        <h1>{{forum.topic}}</h1>
+                        <h1>{{forum.title}}</h1>
                         <div class="card-body container">
                             <p> By: {{forum.name}}</p>{{forum.date_created}}<hr>
                             <p>{{forum.description}}</p>
