--- a/KentStateConnect/templates/profile.html
+++ b/KentStateConnect/templates/profile.html
@@ -9,15 +9,15 @@
     <table>
         <tr>
             <td>Username:</td>
-            <td>{{ account['username'] }}</td>
+            <td>{{ account[2] }}</td>
         </tr>
         <tr>
             <td>Email:</td>
-            <td>{{ account['email'] }}</td>
+            <td>{{ account[4] }}</td>
         </tr>
         <tr>
-            <td>Role:</td>
-            <td>{{ account['role'] }}</td>
+            <td>Account Created on:</td>
+            <td>{{ account[6] }}</td>
         </tr>
     </table>
     <a href="{{ url_for('edit_profile') }}">Edit Profile</a>
