Added check for authentication for login/logout buttons on main site

--- a/KentStateConnect/templates/layout.html
+++ b/KentStateConnect/templates/layout.html
@@ -26,9 +26,12 @@
                     <li><a href="{{ url_for('contact') }}">Contact</a></li>
                     <li><a href="{{ url_for('resources') }}">Resources</a></li>
                     <li><a href="{{ url_for('forum') }}">Forum</a></li>
-                    <li><a href="{{ url_for('login') }}">Login</a></li>
+                    {% if username %}
                     <li><a href="{{ url_for('logout') }}">Logout</a></li>
-                    <li><a href="{{ url_for('profile') }}">Profile</a></li>
+                    <li><a href="{{ url_for('profile') }}">{{username}}</a></li>
+                    {% else %}
+                    <li><a href="{{ url_for('login') }}">Login</a></li>
+                    {% endif %}
         </div> 
     </body> 
 </html> 
