Added 'Other' categories for careers and coding help

--- a/templates/CodingHelp.html
+++ b/templates/CodingHelp.html
@@ -62,6 +62,11 @@
         Talk about Front End languages (HTML, CSS, etc.) and ask for help here.
         <br>
         <hr>
+        <a href="http://localhost:8000/CodingHelp/OtherLanguages"><h1>Other Languages</h1></a>
+        <p align="right>">Total Discussions: {{OLcount}}</p>
+        Talk about languages that do not have a specific category here. If a particular language gains enough traction, it will eventually be made into its own category.
+        <br>
+        <hr>
     </div>
     </div>
 
