--- a/templates/careers.html
+++ b/templates/careers.html
@@ -62,6 +62,11 @@
         This is a place where you can discuss Information Technology careers.
         <br>
         <hr>
+        <a href="http://localhost:8000/Careers/OtherCareers"><h1>Other Careers</h1></a>
+        <p align="right>">Total Discussions: {{OCcount}}</p>
+        Have other career options in mind? Talk about them here! Popular career options will have their own categories created.
+        <br>
+        <hr>
     </div>
     </div>
 
